# metabolic-graph-rag

./: .codespellrc  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
airflow/dags/: kegg_ingestion.py
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/api/: __init__.py
backend/app/db/: neo4j.py
backend/app/rag/: __init__.py  context_builder.py  llm_client.py  pipeline.py  query_understanding.py  (+3 more)
docker/airflow/: Dockerfile
docker/neo4j/: dockerfile
docs/: README.md  architecture.md  development.md  openapi.yaml  quickstart.md  testing.md
docs/Build_tasks/: task1.md  task1a.md  task2.md  task3.md
etl/: __init__.py  config.py  ingest_kegg_cli.py
etl/enrich/: compound_enrichment.py
etl/fetch/: __init__.py  kegg_api.py
etl/load/: __init__.py  neo4j_loader.py
etl/models/: domain_models.py  kegg_types.py
etl/normalize/: __init__.py  domain_models_builder.py  kegg_enzymes.py  kegg_modules.py  kegg_pipeline.py  kegg_reactions.py  name_utils.py
graph/: sanity_queries.cypher  schema.cypher
notebooks/: test_keeg_api.ipynb  test_question_validation.ipynb
orchestration/airflow/: README.md  docker-compose.yml
orchestration/prefect/: ingestion_flow.py
scripts/: airflow_logs.sh  reset_graph.py  test_neo4j_loader.py
tests/airflow/: test_kegg_dag.py
tests/backend/: test_api_routes.py  test_context_builder.py  test_graph_queries.py  test_graph_schemas.py  test_llm_client.py  test_name_utils.py  test_openapi_contract.py  test_query_understanding.py  test_rag_retriever.py
tests/etl/: test_kegg_parsing.py  test_name_utils.py
(+13 files in other folders)
